--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="container">
-      <img src="/assets/images/avatar-jessica.jpeg" alt="">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="">
     <h1 class="name">Jessica Randall</h1>
     <p class="address">London, United Kingdom</p>
     <p class="designation">"Front-end developer and avid reader."</p>
